--- a/WorkingWithGoogleColab.ipynb
+++ b/WorkingWithGoogleColab.ipynb
@@ -169,6 +169,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "hEV5WILhGCcI",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Saving a second version with the same name on github"
+      ]
     }
   ]
 }
